fix build.gradle
MainFrame again runnable
junittests again testable